ממשתי את Welcome9142

--- a/dotNet5781_00_ 5173_9142/dotNet5781_00_ 5173_9142.csproj
+++ b/dotNet5781_00_ 5173_9142/dotNet5781_00_ 5173_9142.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program9142.cs" />
     <Compile Include="Program5173.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
