made some change

--- a/dotNet5781_02_5713_9142/dotNet5781_02_5713_9142.csproj
+++ b/dotNet5781_02_5713_9142/dotNet5781_02_5713_9142.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bus.cs" />
     <Compile Include="BusCompany.cs" />
     <Compile Include="BusLine.cs" />
     <Compile Include="BusStation.cs" />
