--- a/dotNet5781_02_5173_9142/dotNet5781_02_5713_9142.csproj
+++ b/dotNet5781_02_5173_9142/dotNet5781_02_5713_9142.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3DE9C60E-AFAE-40C7-918B-EC8499607F9A}</ProjectGuid>
+    <ProjectGuid>{46F7E2AF-4E54-48C1-B96D-E9D827B246A2}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>dotNet5781_02_5173_9142</RootNamespace>
-    <AssemblyName>dotNet5781_02_5173_9142</AssemblyName>
+    <RootNamespace>dotNet5781_02_5713_9142</RootNamespace>
+    <AssemblyName>dotNet5781_02_5713_9142</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusCompany.cs" />
+    <Compile Include="BusLine.cs" />
+    <Compile Include="BusStation.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Station.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
