finish with line sta

--- a/PL_WPF/PL_WPF.csproj
+++ b/PL_WPF/PL_WPF.csproj
@@ -63,6 +63,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="LineStationDatails.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\LineWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -86,6 +90,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="LineStationDatails.xaml.cs">
+      <DependentUpon>LineStationDatails.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\LineWindow.xaml.cs">
       <DependentUpon>LineWindow.xaml</DependentUpon>
