--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BlApi\BLFactory.cs" />
     <Compile Include="BlImp.cs" />
     <Compile Include="BO\Exceptions.cs" />
+    <Compile Include="BO\StationDistance.cs" />
     <Compile Include="DeepCopyUtilities.cs" />
     <Compile Include="BlApi\IBL.cs" />
     <Compile Include="BO\Bus.cs" />
