--- a/PL_WPF/PL_WPF.csproj
+++ b/PL_WPF/PL_WPF.csproj
@@ -73,6 +73,9 @@
     <Compile Include="AddStop.xaml.cs">
       <DependentUpon>AddStop.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SimulationWin.xaml.cs">
+      <DependentUpon>SimulationWin.xaml</DependentUpon>
+    </Compile>
     <Compile Include="StationDetails.xaml.cs">
       <DependentUpon>StationDetails.xaml</DependentUpon>
     </Compile>
@@ -82,6 +85,7 @@
     <Compile Include="UpdatePairWin.xaml.cs">
       <DependentUpon>UpdatePairWin.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UpdateTime.cs" />
     <Page Include="AddBus.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -151,6 +155,10 @@
       <DependentUpon>DriverWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="ManageWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SimulationWin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
